Load drf-spectacular settings from env

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ DB_PORT=5432
 STATIC_URL=/static/
 OTP_EXPIRATION_SECONDS=120
 REDIS_URL=redis://localhost:6379/0
+
+SPECTACULAR_TITLE=Testcodex API
+SPECTACULAR_DESCRIPTION=API documentation
+SPECTACULAR_VERSION=1.0.0
