fix: remove migration from gitignore freeze requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,43 @@
-Django>=4.2
-djangorestframework
-python-dotenv
-redis
-djangorestframework-simplejwt
-django-activity-stream
-drf-spectacular
-drf-spectacular-sidecar
-sphinx
+alabaster==1.0.0
+asgiref==3.8.1
+attrs==25.3.0
+babel==2.17.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+Django==5.2.1
+django-activity-stream==2.0.0
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+docutils==0.21.2
+drf-spectacular==0.28.0
+drf-spectacular-sidecar==2025.6.1
+idna==3.10
+imagesize==1.4.1
+inflection==0.5.1
+Jinja2==3.1.6
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+MarkupSafe==3.0.2
+packaging==25.0
+psycopg2-binary==2.9.10
+Pygments==2.19.1
+PyJWT==2.9.0
+python-dotenv==1.1.0
+PyYAML==6.0.2
+redis==6.2.0
+referencing==0.36.2
+requests==2.32.3
+roman-numerals-py==3.1.0
+rpds-py==0.25.1
+snowballstemmer==3.0.1
+Sphinx==8.2.3
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+sqlparse==0.5.3
+typing_extensions==4.14.0
+uritemplate==4.2.0
+urllib3==2.4.0
